# lfp-build-py

./: .bumpversion.cfg  .dev.env  .gitattributes  .gitignore  AGENTS.md  AGENT_README.md  README.md  install.ps1  install.sh  mise.toml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
scripts/: release_bump.sh
src/lfp_build/: __init__.py  _config.py  bundle.py  cli.py  config.py  names.py  pyproject.py  readme.py  rename.py  util.py  version.py  workspace.py  workspace_create.py  workspace_dist.py  workspace_sync.py
src/lfp_build/commands/: _install.py  add.py  build.py  docs.py  hooks.py  init.py  readme.py  rename.py  skills.py  sync.py
src/lfp_build/docs/: lfp-build-conventions.md
src/lfp_build/docs/lfp-build-workspace/: SKILL.md
src/lfp_build/templates/: init_pyproject.toml
tests/: conftest.py  test_bundle.py  test_cli_readme.py  test_create_project.py  test_dist.py  test_names.py  test_pyproject.py  test_skills_install.py  test_sync.py  test_util.py  test_workspace_metadata_fix.py
