[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lfp-build"
version = "0.0.5"
description = "Local build utilities"
requires-python = ">=3.11"
dependencies = [
    # Build and workspace command orchestration backend.
    "uv>=0.9.9",
    # CLI framework used for command parsing and help output.
    "cyclopts",
    # Logging facade used across all modules.
    "lfp-logging @ git+https://github.com/regbo/lfp-logging-py.git",
    # Load .env files for runtime config defaults.
    "python-dotenv",
    # Auto-load lfp_build._config at interpreter startup.
    "sitecustomize-entrypoints",
    # Parse and write pyproject.toml with formatting preservation.
    "tomlkit",
    # Deep merge for pyproject tables.
    "mergedeep",
    # Lint and format engine invoked by sync.
    "ruff",
]

[project.scripts]
lfp-build = "lfp_build.cli:main"

[project.entry-points.sitecustomize]
lfp-build-config = "lfp_build._config:load"

[dependency-groups]
dev = ["pytest", "bumpversion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN202", "ANN201"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64"]

[tool.pixi.target.unix.dependencies]
bash = "*"

[tool.pixi.target.win-64.dependencies]
m2-bash = "*"

[tool.pixi.pypi-dependencies]
lfp-build = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default", features = ["dev"] }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
publish = { cmd = "bash scripts/release_bump.sh \"{{ part }}\" \"{{ message }}\"", args = [{ arg = "part", default = "patch" }, { arg = "message", default = "incrementing version to new release" }] }
