[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lfp-build"
version = "0.0.16"
description = "Local build utilities"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Build and workspace command orchestration backend.
    "uv>=0.9.9",
    # CLI framework used for command parsing and help output.
    "cyclopts",
    # Logging facade used across all modules.
    "lfp-logging",
    # Load .env files for runtime config defaults.
    "python-dotenv",
    # Auto-load lfp_build._config at interpreter startup.
    "sitecustomize-entrypoints",
    # Parse and write pyproject.toml with formatting preservation.
    "tomlkit",
    # Deep merge for pyproject tables.
    "mergedeep",
    # Lint and format engine invoked by sync.
    "ruff",
]

[project.scripts]
lfp-build = "lfp_build.cli:main"

[project.entry-points.sitecustomize]
lfp-build-config = "lfp_build._config:load"

[dependency-groups]
dev = ["pytest", "bump-my-version"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN202", "ANN201"]

[tool.bumpversion]
current_version = "0.0.16"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64"]

[tool.pixi.pypi-dependencies]
lfp-build = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default", features = ["dev"] }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
ruff-fix = "ruff check . --fix --unsafe-fixes && ruff format ."
publish = { cmd = "git add . && (git diff --staged --quiet || git commit -m \"pre-release: staging changes\") && bump-my-version bump {{ part }} --message \"{{ message }}\" && git push origin HEAD --tags", args = [
    { arg = "part", default = "patch" },
    { arg = "message", default = "incrementing version to {new_version}" },
], depends-on = [
    "ruff-fix",
] }
